--- a/_html/cuenta.html
+++ b/_html/cuenta.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AllGames</title>
+    <title>Mi cuenta</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="../_css/juego.css">
+    <link rel="stylesheet" href="../_css/sesion-inicio-formulario.css">
+    <link rel="stylesheet" href="../_css/cuenta.css">
     <link rel="shortcut icon" href="../_img/logo1.png">
     <script src="../_js/general.js"></script>
-    <script src="../_js/juego.js"></script>
+    <script src="../_js/cuenta.js"></script>
 </head>
 <body>
   <div id="pagina">
@@ -61,46 +62,33 @@
            <!-- </div> -->
          </ul>
       </nav>
-
-      <div id="toast"></div>
-
-    <div id="infoPelicula">
-      <a href="#">
-		    <img id="portada" class="portada" src="" alt="">
-        <button id="btnWishlist" class="btn btn-danger"><i class="fas fa-heart"></i> Añadir a wishlist</button>
-	    </a>
-	    <div id="content">
-        <h1 id="nombre"></h1>
-        <div id="divInfo">
-          <div id="genero"></div>
-          <img id="pegi" src="" width="35px" height="50px" class="pegi" alt="">
-          <div id="plataforma"></div>
-          <h5 id="aPrecio"></h5>
-          <h2 id="precio"></h2>
-        </div>
-        <p id="descripcion"></p>
-        <div id= "trailer" class="mx-auto"></div>
-      </div>
-      <h4>Reseñas</h4>
-      <div class="divResenias">
-        <div class="divInsertarResenia">
-          <div class="divInsertarResenia2">
-            <textarea id="insertarResenia" cols="30" rows="3" placeholder="Escribe tu opinión..."></textarea>
-            <div id="valoracion">
-              <i id="star1" class="far fa-star"></i>
-              <i id="star2" class="far fa-star"></i>
-              <i id="star3" class="far fa-star"></i>
-              <i id="star4" class="far fa-star"></i>
-              <i id="star5" class="far fa-star"></i>
+    <div class="container">
+      <div class="row">
+          <div class="col">
+                <div class="panel panel-login rounded">
+                    <div class="panel-heading rounded">
+                        <div class="col-xs-6">
+                        <button type="button" class="btn btn-outline-dark" id="perfil"><i class="fas fa-address-card"></i> Perfil</button>
+                      </div>
+                      <div class="col-xs-6">
+                        <button type="button" class="btn btn-outline-dark" id="btnPedidos"><i class="fas fa-box-open"></i> Mis Pedidos</button>
+                      </div>
+                      <div class="col-xs-6">
+                        <button type="button" class="btn btn-outline-dark btnCerrarSesion" id="btnCerrarSesion"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</button>
+                      </div>                              
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div id="contenido" class="panel-body rounded"></div>
+                </div>
+              </div>
             </div>
-          </div>
-          <button id="insertar" class="btn btn-secondary">Enviar</button>
-        </div>
-        <div id="resenias" class="divResenias"></div>
-      </div>
-    </div>
-         <!-- Footer -->
-    <footer class="page-footer font-small special-color-dark pt-4">
+
+
+      
+  <!-- Footer -->
+  <footer class="page-footer font-small special-color-dark pt-4 footer">
     <div class="container">
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
@@ -130,10 +118,48 @@
     <div class="footer-copyright text-center py-3">© 2021 Copyright
       <a href="#"> Iván Rodríguez Carrasco</a>
     </div>
-    <!-- Copyright -->
-  
-     </footer>
-    <!-- Footer -->
+</footer>
+</div>
+
+<!-- basic modal -->
+<div class="modal fade" id="showModal">
+    <div class="modal-dialog">
+      <div id="modalContent" class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Pedido Realizado</h4>
+          <button id="close" type="button" class="close" data-dismiss="closeModal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div id="modalBody" class="modal-body">
+          <div class="ticket">
+            <div class="ticket-Header">
+              <div class="ticket-LogoDiv">
+                <img src="../_img/logo.png" class="ticket-Logo">
+              </div>
+              <div class="ticket-Info">
+                <span id="ticketFecha" class="ticket-Fecha"></span>
+                <span id="ticketUsuario" class="ticket-Usuario"></span>
+              </div>
+            </div>
+            <div class="ticket-Body">
+              <h2 id="ticketTitle" class="ticket-Title"></h2>
+              <ul id="ticketCartList" class="ticket-CartList"></ul>
+            </div>
+            <div class="ticket-Subheader">
+              <div class="ticket-Subheader2">
+                <h1 id="ticketGamekey" class="ticket-Gamekey"></h1>
+                <span id="ticketText" class="ticket-Text"></span>
+              </div>
+            </div>
+            <div class="ticket-Footer">
+              <img src="../_img/barcode1.png" class="ticket-Barcode">
+            </div>
+          </div>
+        <div class="modal-footer">
+          <button id="verPedido" type="button" class="btn btn-primary">Imprimir</button> <!--redireccionar a pedidos-->
+        </div>
+      </div>
     </div>
 </body>
 </html>
