--- a/_html/cuenta.html
+++ b/_html/cuenta.html
@@ -11,35 +11,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="../_css/sesion-inicio-formulario.css">
-    <link rel="stylesheet" href="../_css/cuenta.css">
-    <link rel="shortcut icon" href="../_img/logo1.png">
+    <link rel="stylesheet" href="../_css/cuenta.css"> 
+    <link rel="shortcut icon" href="../_img/icon.png">
     <script src="../_js/general.js"></script>
     <script src="../_js/cuenta.js"></script>
 </head>
 <body>
   <div id="pagina">
-    <!-- <div id="google_translate_element"></div>
-
-         <script type="text/javascript">
-         function googleTranslateElementInit() {
-         new google.translate.TranslateElement({pageLanguage: 'es'}, 'google_translate_element');
-         }
-         </script>
-
-         <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-         --> 
  <nav class="navbar">
    <!-- <div class="row"> -->
        <!-- <div class="col align-self-center"> -->
-         <a class="logo" href="../_html/index.html">
-             <img src="../_img/logo.png" href="../_html/index.html"/>
-         </a>
+        <a href="../_html/index.html">
+          <img src="../_img/logo.png" width="486" height="92" alt="AllGAMES" /></a>
+        <br />
        <!-- </div> -->
      <div class="nav-uls">
        <ul class="navbar-nav buscar">
          <div id="inputBuscar" class="input-group rounded">
-             <input type="search" class="form-control rounded" placeholder="Buscar..." aria-label="Search" aria-describedby="search-addon" id="buscar"/>
-             <button id="btnGeneros" class="btn btn-dark fas fa-angle-down">Todos los Géneros</button>
+             <input type="search" class="form-control form-controlBuscar rounded" placeholder="Buscar..." aria-label="Search" aria-describedby="search-addon" id="buscar"/>
              <button id="btnBuscar" class="btn btn-outline-success fas fa-search"></button>
          </div>
        </ul>
