--- a/_html/index.html
+++ b/_html/index.html
@@ -10,36 +10,26 @@
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="../_css/index.css">
-    <link rel="shortcut icon" href="../_img/logo1.png">
+    <link rel="stylesheet" href="../_css/index.css"> 
+    <link rel="shortcut icon" href="../_img/icon.png">
     <script src="../_js/general.js"></script>
     <script src="../_js/index.js"></script>
 </head>
 <body>
-    <div id="pagina">
-       <!-- <div id="google_translate_element"></div>
-
-            <script type="text/javascript">
-            function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'es'}, 'google_translate_element');
-            }
-            </script>
-
-            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-            --> 
+    <div id="pagina" class="pagina">
     <nav class="navbar">
       <!-- <div class="row"> -->
           <!-- <div class="col align-self-center"> -->
-            <a class="logo" href="../_html/index.html">
-                <img src="../_img/logo.png" href="../_html/index.html"/>
-            </a>
+            <a href="../_html/index.html">
+              <img src="../_img/logo.png" width="486" height="92" alt="AllGAMES" /></a>
+            <br />
           <!-- </div> -->
         <div class="nav-uls">
           <ul class="navbar-nav buscar">
             <div class="input-group rounded">
                 <input type="search" class="form-control rounded" placeholder="Buscar..." aria-label="Search" aria-describedby="search-addon" id="buscar"/>
-                <button id="btnGeneros" class="btn btn-dark fas fa-angle-down">Todos los Géneros</button>
-                <button id="btnBuscar" class="btn btn-outline-success fas fa-search"></button>
+                <!-- <button id="btnGeneros" class="btn btn-dark fas fa-angle-down">Todos los Géneros</button>
+                 --><button id="btnBuscar" class="btn btnBuscar fas fa-search rounded"></button>
             </div>
           </ul>
       <!--  </div> -->
@@ -83,16 +73,16 @@
     <div class="container text-center">
       <div class="row justify-content-around">
           <div class="col mx-auto text-center">
-            <button id="btnTodos" class="btn btn-secondary">Todos <i class="fas fa-gamepad"></i></button>
+            <button id="btnTodos" class="btn btn-secondary btnPlataforma">Todos <i class="fas fa-gamepad"></i></button>
           </div>
           <div class="col mx-auto text-center">
-            <button id="btnPlaystation" class="btn btn-primary"><i class="fab fa-playstation"></i></button>
+            <button id="btnPlaystation" class="btn btn-primary btnPlataforma"><i class="fab fa-playstation"></i></button>
           </div>
           <div class="col mx-auto text-center">
-            <button id="btnXbox" class="btn btn-success"><i class="fab fa-xbox"></i></button>
+            <button id="btnXbox" class="btn btn-success btnPlataforma"><i class="fab fa-xbox"></i></button>
           </div>
           <div class="col mx-auto text-center">
-            <button id="btnSteam" class="btn btn-dark"><i class="fab fa-steam"></i></button>
+            <button id="btnSteam" class="btn btn-dark btnPlataforma"><i class="fab fa-steam"></i></button>
           </div>
       </div>
     </div>
@@ -172,7 +162,7 @@
           </div>
         </div>
       <div class="modal-footer">
-        <button id="verPedido" type="button" class="btn btn-primary">Imprimir</button>
+        <button id="verPedido" type="button" class="btn btn-primary" style="background-color: #b313ab;">Imprimir</button>
       </div>
     </div>
   </div>
