--- a/_html/sesion-inicio-formulario.html
+++ b/_html/sesion-inicio-formulario.html
@@ -12,8 +12,8 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="../_css/sesion-inicio-formulario.css">
-    <link rel="shortcut icon" href="../_img/logo1.png">
+    <link rel="stylesheet" href="../_css/sesion-inicio-formulario.css"> 
+    <link rel="shortcut icon" href="../_img/icon.png">
     <script src="../_js/general.js"></script>
     <script src="../_js/sesion-inicio-formulario.js"></script>
     
@@ -21,16 +21,9 @@
 </head>
 <body>
     <div id="pagina">
-        <!-- <div id="google_translate_element"></div>
-
-        <script type="text/javascript">
-        function googleTranslateElementInit() {
-        new google.translate.TranslateElement({pageLanguage: 'es'}, 'google_translate_element');
-        }
-        </script>
-
-        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-        -->
+      <a class="justifiy-content-center" href="../_html/index.html">
+        <img style="display:block;margin:auto;" src="../_img/logo.png" width="486" height="92" alt="AllGAMES" /></a>
+      <br />
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
@@ -53,7 +46,7 @@
         </div>
 
 <!-- SVG OLAS -->
-<svg width="100%" height="100%" id="svg" viewBox="0 0 1440 600" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d08466"></stop><stop offset="95%" stop-color="#0693e366"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,150 0,150 C 155.78571428571428,129.14285714285714 311.57142857142856,108.28571428571429 412,117 C 512.4285714285714,125.71428571428571 557.4999999999999,164 673,170 C 788.5000000000001,176 974.4285714285716,149.71428571428572 1114,141 C 1253.5714285714284,132.28571428571428 1346.7857142857142,141.14285714285714 1440,150 C 1440,150 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-0"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d08488"></stop><stop offset="95%" stop-color="#0693e388"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,300 0,300 C 120,270.5357142857143 240,241.07142857142856 353,249 C 466,256.92857142857144 572,302.24999999999994 679,322 C 786,341.75000000000006 894,335.92857142857144 1021,328 C 1148,320.07142857142856 1294,310.0357142857143 1440,300 C 1440,300 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-1"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d084ff"></stop><stop offset="95%" stop-color="#0693e3ff"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,450 0,450 C 114.42857142857144,443.3928571428571 228.8571428571429,436.7857142857143 371,449 C 513.1428571428571,461.2142857142857 683,492.24999999999994 787,498 C 891,503.75000000000006 929.1428571428571,484.21428571428567 1027,472 C 1124.857142857143,459.78571428571433 1282.4285714285716,454.89285714285717 1440,450 C 1440,450 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-2"></path></svg>
+<svg style="margin-top:-8rem;" width="100%" height="100%" id="svg" viewBox="0 0 1440 600" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d08466"></stop><stop offset="95%" stop-color="#0693e366"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,150 0,150 C 155.78571428571428,129.14285714285714 311.57142857142856,108.28571428571429 412,117 C 512.4285714285714,125.71428571428571 557.4999999999999,164 673,170 C 788.5000000000001,176 974.4285714285716,149.71428571428572 1114,141 C 1253.5714285714284,132.28571428571428 1346.7857142857142,141.14285714285714 1440,150 C 1440,150 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-0"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d08488"></stop><stop offset="95%" stop-color="#0693e388"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,300 0,300 C 120,270.5357142857143 240,241.07142857142856 353,249 C 466,256.92857142857144 572,302.24999999999994 679,322 C 786,341.75000000000006 894,335.92857142857144 1021,328 C 1148,320.07142857142856 1294,310.0357142857143 1440,300 C 1440,300 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-1"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00d084ff"></stop><stop offset="95%" stop-color="#0693e3ff"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,450 0,450 C 114.42857142857144,443.3928571428571 228.8571428571429,436.7857142857143 371,449 C 513.1428571428571,461.2142857142857 683,492.24999999999994 787,498 C 891,503.75000000000006 929.1428571428571,484.21428571428567 1027,472 C 1124.857142857143,459.78571428571433 1282.4285714285716,454.89285714285717 1440,450 C 1440,450 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-2"></path></svg>
 
 
  <!-- Footer -->
