--- a/_html/juego.html
+++ b/_html/juego.html
@@ -18,12 +18,9 @@
 <body>
   <div id="pagina">
  <nav class="navbar">
-   <!-- <div class="row"> -->
-       <!-- <div class="col align-self-center"> -->
         <a href="../_html/index.html">
           <img src="../_img/logo.png" width="486" height="92" alt="AllGAMES" /></a>
         <br />
-       <!-- </div> -->
      <div class="nav-uls">
        <ul class="navbar-nav buscar">
          <div id="inputBuscar" class="input-group rounded">
@@ -31,29 +28,23 @@
              <button id="btnBuscar" class="btn btn-outline-success fas fa-search"></button>
          </div>
        </ul>
-   <!--  </div> -->
-         <!-- <div class="col col-md-auto align-self-center">  -->
              <ul class="navbar-nav float-center">  
                <li class="nav-item">  
                  <a id="wishlist" href="../_html/wishlist.html"><i class="fas fa-heart"></i> Lista de deseos</a>
                </li>
-             <!-- <ul class="col col-md-auto align-self-center">  -->
                <li class="nav-item"> 
                  <a  id="btnPerfil" href="../_html/cuenta.html"><i class="fas fa-user-circle"></i> Mi Cuenta</a><br>
                </li>
              </ul>
-         <!-- </div> -->
-        <!--  <div class="col">  -->
+
           <ul id="cart" data-totalitems="0" class="navbar-nav ml-auto cart">
-           <!-- <div id="cart" class="cart" data-totalitems="0"> -->
              <i class="fas fa-shopping-cart cartIcon"></i>
-           <!-- </div> -->
          </ul>
       </nav>
 
       <div id="toast"></div>
 
-    <div id="infoPelicula">
+    <div id="infoJuego">
       <a href="#">
 		    <img id="portada" class="portada" src="" alt="">
         <button id="btnWishlist" class="btn btn-danger"><i class="fas fa-heart"></i> Añadir a wishlist</button>
