--- a/_html/sesion-inicio-formulario.html
+++ b/_html/sesion-inicio-formulario.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="pagina">
-      <a class="justifiy-content-center" href="../_html/index.html">
+      <a class="justifiy-content-center">
         <img style="display:block;margin:auto;" src="../_img/logo.png" width="486" height="92" alt="AllGAMES" /></a>
       <br />
         <div class="container">
